moving before after images

--- a/gallery.html
+++ b/gallery.html
@@ -53,95 +53,95 @@
 </header><!-- end #header -->		<section id="content" class="container clearfix">
 		
 			<section id="portfolio-items" class="clearfix">				<article class="one-half">
-					<img src="img/before-after/01-before.jpg" alt="">
+					<img src="img/01-before.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">1. BEFORE</h5></a>
 				</article><!-- end .one-half -->
 				<article class="one-half">
-					<img src="img/before-after/01-after.jpg" alt="">
+					<img src="img/01-after.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">2. AFTER</h5></a>
 				</article><!-- end .one-half -->				<article class="one-half">
-					<img src="img/before-after/02-before.jpg" alt="">
+					<img src="img/02-before.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">3. BEFORE</h5></a>
 				</article><!-- end .one-half -->
 				<article class="one-half">
-					<img src="img/before-after/02-after.jpg" alt="">
+					<img src="img/02-after.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">4. AFTER</h5></a>
 				</article><!-- end .one-half -->				<article class="one-half">
-					<img src="img/before-after/03-before.jpg" alt="">
+					<img src="img/03-before.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">5. BEFORE</h5></a>
 				</article><!-- end .one-half -->
 				<article class="one-half">
-					<img src="img/before-after/03-after.jpg" alt="">
+					<img src="img/03-after.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">6. AFTER</h5></a>
 				</article><!-- end .one-half -->				<article class="one-half">
-					<img src="img/before-after/04-before.jpg" alt="">
+					<img src="img/04-before.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">7. BEFORE</h5></a>
 				</article><!-- end .one-half -->
 				<article class="one-half">
-					<img src="img/before-after/04-after.jpg" alt="">
+					<img src="img/04-after.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">8. AFTER</h5></a>
 				</article><!-- end .one-half -->				<article class="one-half">
-					<img src="img/before-after/05-before.jpg" alt="">
+					<img src="img/05-before.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">9. BEFORE</h5></a>
 				</article><!-- end .one-half -->
 				<article class="one-half">
-					<img src="img/before-after/05-after.jpg" alt="">
+					<img src="img/05-after.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">10. AFTER</h5></a>
 				</article><!-- end .one-half -->				<article class="one-half">
-					<img src="img/before-after/06-before.jpg" alt="">
+					<img src="img/06-before.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">11. BEFORE</h5></a>
 				</article><!-- end .one-half -->
 				<article class="one-half">
-					<img src="img/before-after/06-after.jpg" alt="">
+					<img src="img/06-after.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">12. AFTER</h5></a>
 				</article><!-- end .one-half -->				<article class="one-half">
-					<img src="img/before-after/07-before.jpg" alt="">
+					<img src="img/07-before.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">13. BEFORE</h5></a>
 				</article><!-- end .one-half -->
 				<article class="one-half">
-					<img src="img/before-after/07-after.jpg" alt="">
+					<img src="img/07-after.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">14. AFTER</h5></a>
 				</article><!-- end .one-half -->				<article class="one-half">
-					<img src="img/before-after/08-before.jpg" alt="">
+					<img src="img/08-before.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">15. BEFORE</h5></a>
 				</article><!-- end .one-half -->
 				<article class="one-half">
-					<img src="img/before-after/08-after.jpg" alt="">
+					<img src="img/08-after.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">16. AFTER</h5></a>
 				</article><!-- end .one-half -->				<article class="one-half">
-					<img src="img/before-after/09-before.jpg" alt="">
+					<img src="img/09-before.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">17. BEFORE</h5></a>
 				</article><!-- end .one-half -->
 				<article class="one-half">
-					<img src="img/before-after/09-after.jpg" alt="">
+					<img src="img/09-after.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">18. AFTER</h5></a>
 				</article><!-- end .one-half -->				<article class="one-half">
-					<img src="img/before-after/10-before.jpg" alt="">
+					<img src="img/10-before.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">19. BEFORE</h5></a>
 				</article><!-- end .one-half -->
 				<article class="one-half">
-					<img src="img/before-after/10-after.jpg" alt="">
+					<img src="img/10-after.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">20. AFTER</h5></a>
 				</article><!-- end .one-half -->				<article class="one-half">
-					<img src="img/before-after/11-before.jpg" alt="">
+					<img src="img/11-before.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">21. BEFORE</h5></a>
 				</article><!-- end .one-half -->
 				<article class="one-half">
-					<img src="img/before-after/11-after.jpg" alt="">
+					<img src="img/11-after.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">22. AFTER</h5></a>
 				</article><!-- end .one-half -->				<article class="one-half">
-					<img src="img/before-after/12-before.jpg" alt="">
+					<img src="img/12-before.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">23. BEFORE</h5></a>
 				</article><!-- end .one-half -->
 				<article class="one-half">
-					<img src="img/before-after/12-after.jpg" alt="">
+					<img src="img/12-after.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">24. AFTER</h5></a>
 				</article><!-- end .one-half -->				<article class="one-half">
-					<img src="img/before-after/13-before.jpg" alt="">
+					<img src="img/13-before.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">25. BEFORE</h5></a>
 				</article><!-- end .one-half -->
 				<article class="one-half">
-					<img src="img/before-after/13-after.jpg" alt="">
+					<img src="img/13-after.jpg" alt="">
 					<a class="project-meta"><h5 class="title" style="padding-bottom:15px">26. AFTER</h5></a>
 				</article><!-- end .one-half -->	        </article><!-- end .one-half -->
 	
