--- a/contact.html
+++ b/contact.html
@@ -69,6 +69,7 @@
             <a target="_blank" href="https://www.yelp.com/biz/parimal-pj-nagjee-dds-beverly-hills">Yelp</a> |
             <a target="_blank" href="https://www.facebook.com/dr.nagjee">Facebook</a>
             <br />
+            <br />
 
         </div><!-- end .one-fourth -->
 
@@ -76,21 +77,24 @@
 
             450 N. Bedford Dr. Ste. 209<br/>
             Beverly Hills, CA 90210<br/>
-            Directions: <a href="https://goo.gl/maps/ceSFrW6YjweNhToC7?coh=178571&entry=tt" target="_blank">Google Maps</a><br />
+            Directions: <a href="https://goo.gl/maps/ceSFrW6YjweNhToC7?coh=178571&entry=tt" target="_blank">Google Maps</a>
+            <br />
             <br />
 
         </div><!-- end .one-fourth -->
 
         <div class="one-fourth">
 
-            Mon, Tue, Thu: 7:00 am - 5:00 pm<br />
-            Fri: 7:00 am - 11:00 am<br />
+            Hours:<br />
+            Mon: 7 AM - 5 PM<br />
+            Tue: 7 AM - 5 PM<br />
+            Wed: Closed<br />
+            Thu: 7 AM - 5 PM<br />
+            Fri: 7 AM - 11 AM
+            <br />
             <br />
 
         </div><!-- end .one-fourth -->
-        <br/><br/>
-
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3305.0204236692894!2d-118.40567619999999!3d34.0689907!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2bc0810a946fd%3A0xc8580dada6cbeec8!2sParimal%20PJ%20Nagjee%2C%20DDS!5e0!3m2!1sen!2smx!4v1684349536334!5m2!1sen!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 	</div><!-- end .container -->
 
