--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
 	
     <div class="one-third last">
 
-        <img src="img/wanted.jpg" width="100%"/>
+        <img src="img/brushes.jpg" width="100%"/>
+        <!-- https://unsplash.com/photos/7TgbRVEYdYY -->
         
     </div><!-- end .one-third.last -->
 
